--- a/.github/workflows/second-python-package.yml
+++ b/.github/workflows/second-python-package.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: jalel-linux
+    runs-on: jalel-self-hosted
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
